shoulda fixed icons on mobiles not being totally shown on first display

--- a/components/ContactMe/contact.module.scss
+++ b/components/ContactMe/contact.module.scss
@@ -16,3 +16,7 @@
     }
   }
 }
+
+.searchbarPlaceholder {
+  height: 1rem;
+}
