--- a/styles/Home.module.scss
+++ b/styles/Home.module.scss
@@ -18,10 +18,6 @@
   padding: 1rem 2rem;
   color: #000;
   flex-grow: 1;
-
-  &.mobileTitle {
-    max-height: 90vh;
-  }
 }
 
 .light .homeTitle {
